samples/_failures_safe/1761520967_6a889e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05f3fb08.c: In function ‘main’:
./samples/SAFE/__tmp_05f3fb08.c:167:5: error: expected expression at end of input
  167 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_05f3fb08.c:167:5: error: expected declaration or statement at end of input
